--- a/home/user/gabriel/hyprland/keybind/hyprland.conf
+++ b/home/user/gabriel/hyprland/keybind/hyprland.conf
@@ -37,6 +37,8 @@ bind = $mainMod, egrave, workspace, 7
 bind = $mainMod, underscore, workspace, 8
 bind = $mainMod, ccedilla, workspace, 9
 bind = $mainMod, agrave, workspace, 10
+bind = $mainMod CTRL, left, workspace, e-1
+bind = $mainMod CTRL, right, workspace, e+1
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, ampersand, movetoworkspace, 1
@@ -49,6 +51,14 @@ bind = $mainMod SHIFT, egrave, movetoworkspace, 7
 bind = $mainMod SHIFT, underscore, movetoworkspace, 8
 bind = $mainMod SHIFT, ccedilla, movetoworkspace, 9
 bind = $mainMod SHIFT, agrave, movetoworkspace, 10
+bind = $mainMod CTRL SHIFT, left, movetoworkspace, -1
+bind = $mainMod CTRL SHIFT, right, movetoworkspace, +1
+
+# Move active worspace to another monitor
+bind = $mainMod CTRL ALT, left, movecurrentworkspacetomonitor, l
+bind = $mainMod CTRL ALT, right, movecurrentworkspacetomonitor, r
+bind = $mainMod CTRL ALT, up, movecurrentworkspacetomonitor, u
+bind = $mainMod CTRL ALT, down, movecurrentworkspacetomonitor, d
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -56,4 +66,12 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
+bindm = $mainMod, mouse:273, resizeactive
+binde = $mainMod ALT, left, resizeactive, -15 0
+binde = $mainMod ALT, right, resizeactive, 15 0
+binde = $mainMod ALT, up, resizeactive, 0 -15
+binde = $mainMod ALT, down, resizeactive, 0 15
