feat: add lock on timeout and remove xwaylandvideobridge

--- a/home/user/gabriel/hyprland/userConfig/hyprland.conf
+++ b/home/user/gabriel/hyprland/userConfig/hyprland.conf
@@ -1,8 +1,3 @@
 exec-once = nohup easyeffects --gapplication-service
-exec-once = xwaylandvideobridge
-
-windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
-windowrulev2 = noanim,class:^(xwaylandvideobridge)$
-windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
-windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
-windowrulev2 = noblur,class:^(xwaylandvideobridge)$
+exec-once = swayidle -w timeout 600 "swaylock" before-sleep "hyprlock"
+exec-once = swayidle -w timeout 1200 "systemctl hibernate"
