--- a/home/user/gabriel/hyprland/userConfig/hyprland.conf
+++ b/home/user/gabriel/hyprland/userConfig/hyprland.conf
@@ -1,3 +1,3 @@
 exec-once = nohup easyeffects --gapplication-service
-exec-once = swayidle -w timeout 600 "swaylock" before-sleep "hyprlock"
+exec-once = swayidle -w timeout 600 "hyprlock" before-sleep "hyprlock"
 exec-once = swayidle -w timeout 1200 "systemctl hibernate"
