fix: revert xwaylandvideobridge

--- a/home/user/gabriel/hyprland/userConfig/hyprland.conf
+++ b/home/user/gabriel/hyprland/userConfig/hyprland.conf
@@ -1,3 +1,10 @@
 exec-once = nohup easyeffects --gapplication-service
 exec-once = swayidle -w timeout 600 "hyprlock" before-sleep "hyprlock"
-exec-once = swayidle -w timeout 1200 "systemctl hibernate"
+exec-once = swayidle -w timeou
+exec-once = xwaylandvideobridge
+
+windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
+windowrulev2 = noanim,class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
+windowrulev2 = noblur,class:^(xwaylandvideobridge)$t 1200 "systemctl hibernate"
