feat: add nextcloud

--- a/home/user/gabriel/hyprland/userConfig/hyprland.conf
+++ b/home/user/gabriel/hyprland/userConfig/hyprland.conf
@@ -1,4 +1,5 @@
 exec-once = nohup easyeffects --gapplication-service
+exec-once = nextcloud
 exec-once = xwaylandvideobridge
 
 windowrulev2 = opacity 0.0 override,class:^(xwaylandvideobridge)$
