feat: update hardware

--- a/home/computer/RevoluNix-Fra/hyprlandMonitor/hyprland.conf
+++ b/home/computer/RevoluNix-Fra/hyprlandMonitor/hyprland.conf
@@ -3,6 +3,7 @@ monitor=eDP-1,2560x1600@165,0x0,1.6
 
 monitor=DP-5,1600x900@60,1600x192,1
 monitor=DP-4,1600x900@60,1600x192,1,mirror,DP-5
+monitor=DP-3,1600x900@60,1600x192,1,mirror,DP-5
 
 monitor=DP-9,1920x1080@75,-2080x-1080,1
 monitor=DP-10,1920x1080@75,-160x-1080,1
